2007-11-05  Jürg Billeter  <j@bitron.ch>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	(action_open_folder_window_callback), (open_one_in_folder_window),
	(action_location_open_folder_window_callback),
	(real_update_location_menu), (real_update_menus):
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-actions.h:
	* src/nautilus-navigation-window-menus.c:
	(nautilus_navigation_window_update_spatial_menu_item),
	(action_folder_window_callback),
	(nautilus_navigation_window_initialize_menus):
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-navigation-window.c:
	(nautilus_navigation_window_init), (always_use_browser_changed):
	* src/nautilus-window-private.h:
	Add menu item to open spatial folder window from browser window to File
	menu and context menus.

2007-11-02  Paolo Borelli  <pborelli@katamail.com>

	* src/file-manager/fm-directory-view.c:
	* src/nautilus-file-management-properties.c:
	* src/nautilus-navigation-window.c:
	* libnautilus-private/nautilus-icon-info.c:
	* libnautilus-private/nautilus-mime-application-chooser.c:
	Plug some minor memory leaks.

2007-11-02  Paolo Borelli  <pborelli@katamail.com>

        * src/file-manager/fm-icon-container.c:
        * src/file-manager/fm-list-view.c:
        * src/nautilus-shell.c:
        * src/nautilus-file-management-properties.c:
        * libnautilus-private/nautilus-column-utilities.c:
        * libnautilus-private/nautilus-column-utilities.h:
        * libnautilus-private/nautilus-column-chooser.c:
        * libnautilus-private/nautilus-column-chooser.h:
	Remove all uses of eel-string-list and update code to the new
	eel_preferences_[set|get]_string_array api.

	* libnautilus-private/nautilus-global-preferences.c:
	Update to the eel-enumerations api changes.

2007-11-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-customization-data.[ch]: